Major Visual Overhaul (WIP)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,84 @@
-#app {
-  font-family: sans-serif;
-  border-style: ridge;
+body {
+  background-color: cyan;
+}
+* {
+  box-sizing: border-box;
+}
+.row::after {
+  position: relative;
+  content: "";
+  clear: both;
+  display: table;
+}
+input:disabled,
+.disabled {
+  background-color: rgba(255, 242, 242, 0.685);
+}
 
-  margin: auto;
-  width: 50%;
-  border-style: groove;
-  padding: 10px;
+.noborder {
+  border: 3px solid cyan;
 }
-label {
-  padding: 10px;
+.row {
+  display: block;
 }
-td {
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-bottom-style: groove;
+
+.border {
+  border: 3px solid lightblue;
+  background-color: cyan;
 }
-option {
+
+[class*="col-"] {
+  padding: 15px;
+  float: left;
 }
-select {
+[class*="col-"] {
+  width: 100%;
 }
-#prefix {
-  text-align: left;
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
 }
-#cField {
-  border: solid;
+
+.header {
+  border: 3px solid lightblue;
+  background-color: cyan;
+  padding: 15px;
+}
+@media screen and (max-width: 800px) {
 }
